General fix that removes the blank line / scrollbar being covered (#2441)
Fixes #2429

- Stop issue with the bottom scroll bar being covered by the footer.

- Centeralised the height calculations and assigned variables to the
  search bar height and the second search bar height.

- Used these newly created variables to calucale the height of the
  editor mount.

--- a/src/components/Editor/SearchBar.css
+++ b/src/components/Editor/SearchBar.css
@@ -2,11 +2,11 @@
 .search-bar {
   display: flex;
   flex-direction: column;
-  max-height: 50%;
 }
 
 .search-bar .search-field {
   padding-left: 7px;
+  height: var(--editor-searchbar-height);
 }
 
 .search-bar .close-btn {
@@ -23,7 +23,7 @@
   flex-shrink: 0;
   justify-content: space-between;
   width: calc(100% - 1px);
-  height: 27px;
+  height: var(--editor-second-searchbar-height);
   background-color: var(--theme-toolbar-background);
   border-bottom: 1px solid var(--theme-splitter-color);
   padding: 0 13px;
